@@ -3,8 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- long line: select starts at beginning; select to end; incorrectly
-  painted
+- soft wrap: dragging on last visible line throws NPEs
 - delayed caret updating: breaks status bar perhaps -- no, some other
   reason
 - tool bar option pane: test external icon references
